--- a/css/style.css
+++ b/css/style.css
@@ -15,22 +15,43 @@ h1 {
     font-family: 'Oswald';
     font-size: 3em;
     font-weight: bolder;
+    margin-bottom: 10px;
 }
 
 h2 {
     font-size: 1.5em;
     font-weight: bold;
     margin-bottom: .5em;
+    font-family: 'Serif';
 }
 
 a.mainlink {
     background-color: #ba6f57;
     color: white;
-    display: inline-block;
+    /* display: inline-block; */
     line-height: 50px;
+    padding: 5px;
     text-align: center;
     text-decoration: none;
-    width: 150px;
+
+}
+
+#repeat {
+    position: absolute;
+    height: 7px;
+    margin-bottom: 50px;
+    width: 63.5%;
+    background: url(https://github.com/codefellows/seattle-code-201d98/blob/main/class-10/lab-a/lab-assets/hr-img.png?raw=true) center repeat-x;
+    background-size: auto 100%;
+}
+
+#repeat2 {
+    position: absolute;
+    height: 7px;
+    margin-top: 4px;
+    width: 63.5%;
+    background: url(https://github.com/codefellows/seattle-code-201d98/blob/main/class-10/lab-a/lab-assets/hr-img.png?raw=true) center repeat-x;
+    background-size: auto 100%;
 }
 
 /* Center everything */
@@ -46,11 +67,11 @@ footer {
     width: 900px;
 }
 
-.bodycolumntop {
+.body.column-top {
     border-top: .5em solid white;
     border-image: repeating-linear-gradient(-45deg, transparent 5px, white 10px, black px) 11;
-    padding-top: 1.5em;
-    margin-top: 2.5em;
+    padding-top: 1em;
+    margin-top: 1em;
 }
 
 /* Top Block */
@@ -64,11 +85,14 @@ body>header {
 body>header>.head {
     display: block;
     font-family: 'Yellowtail', cursive;
-    font-size: 2em;
+    font-size: 2.5em;
+    margin-top: 10px;
 }
 
 body>header>img {
-    float: right;
+    float: left;
+    margin-top: 23px;
+    margin-right: 15px;
     position: relative;
     top: -6px;
 }
@@ -93,6 +117,121 @@ nav li {
     padding: 0;
 }
 
+/* Overall Layout */
+
+section.body {
+    margin: 1em 0;
+    overflow: hidden;
+    width: 100%;
+}
+
+.body.column-one .cut {
+    width: 100%;
+
+}
+
+.cut header {
+    overflow: hidden;
+}
+
+.cut header span:first-child {
+    float: left;
+}
+
+.cut header span:last-child {
+    float: right;
+}
+
+.cut figure {
+    margin-top: 1em;
+}
+
+.cut .copy p {
+    color: grey;
+    font-family: "Serif";
+    font-size: 1.2em;
+    line-height: 1.35em;
+    margin: 1em 0;
+    text-indent: 2em;
+}
+
+
+
+/* Horizontal Positioning */
+
+.cut.horizontal-one {
+    overflow: hidden;
+}
+
+.cut.horizontal-one figure {
+    float: left;
+}
+
+.cut.horizontal-one .links {
+    float: left;
+}
+
+.cut.horizontal-one .copy {
+    color: gray;
+    float: left;
+    font-size: 1.2em;
+    padding: 0 2em;
+    width: calc(100% - 150px - 75px);
+}
+
+.cut.paperimg {
+    position: relative;
+}
+
+.cut.paperimg figure {
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: -1;
+}
+
+
+
+/* Recipe box */
+.recipe {
+    /* display: flex;
+    flex-direction: column; */
+    /* background-image: url(/img/list-bg.png); */
+    column-count: 2;
+    font-family: 'Patrick Hand SC', cursive;
+    font-size: 1.4em;
+    overflow: hidden;
+    padding: .5em 1.5em;
+}
+
+.recipe li {
+    margin: 0;
+    padding: 0;
+    white-space: nowrap;
+}
+
+.recipe span {
+    display: inline-flex;
+    vertical-align: top;
+    white-space: normal;
+}
+
+.recipe label {
+    margin: 0;
+    padding: 0;
+    white-space: nowrap;
+}
+
+.recipe input[type=checkbox]{
+    vertical-align: middle;
+}
+
+:checked + span {
+    text-decoration: line-through;
+}
+
 /* Footer */
 
 footer {
@@ -111,9 +250,21 @@ footer img {
 footer:before {
     border-top: 1em solid wheat;
     content: "";
-    width: 100%;
     position: absolute;
     top: 15px;
+    width: 100%;
     left: 0px;
     z-index: -1;
 }
+
+footer>p {
+    margin: 2px;
+    padding: 2px;
+    color: gray;
+    font-family: 'Serif';
+}
+
+#bottom{
+    margin-bottom: 3em;
+}
+
